Correct chapter headings

--- a/src/epub/text/postscript.xhtml
+++ b/src/epub/text/postscript.xhtml
@@ -7,7 +7,7 @@
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
 		<section id="postscript" epub:type="epilogue">
-			<h2 class="main" id="xd20e3534">Postscript.</h2>
+			<h2 epub:type="title">Postscript</h2>
 			<p class="first">
 				<i>Caleb of Mariaba (Saba), joint proprietor of the Great Diversorium, the Hermes House, at Alexandria, near the Canopian Gate, to the ever noble Lord Publius Lucius Sabinus, sculptor, at Cos.</i>
 			</p>
