Removed class=first

--- a/src/epub/text/translator-note.xhtml
+++ b/src/epub/text/translator-note.xhtml
@@ -8,7 +8,7 @@
 	<body epub:type="frontmatter z3998:non-fiction">
 		<section id="translator-note" epub:type="z3998:translator-note">
 			<h2>Translator’s Note</h2>
-			<p class="first">I am greatly indebted to my friend John Sargeaunt for a number of extremely useful comments and suggestions and to my friend Stephen McKenna for his version of the <i>Hymn to Aphrodite</i> in <a class="pginternal" href="#ch7">Chapter <span epub:type="z3998:roman">VII</span></a>. and for assistance in the translation generally.</p>
+			<p>I am greatly indebted to my friend John Sargeaunt for a number of extremely useful comments and suggestions and to my friend Stephen McKenna for his version of the <i>Hymn to Aphrodite</i> in <a class="pginternal" href="#ch7">Chapter <span epub:type="z3998:roman">VII</span></a>. and for assistance in the translation generally.</p>
 			<p class="signed">
 				<span class="sc">A. T. de M.</span>
 			</p>
