Removed PG correction <span>s

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -16,7 +16,7 @@
 					<p>Stone wells on the banks of the Nile, in which the water rose and fell as in the river itself; marked columns indicated the maximum, minimum and middle gauge. Inspectors informed the people beforehand how high the Nile would rise and when the stream would be likely to overflow its banks.<a href="chapter-11.xhtml#noteref-2" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-3" epub:type="endnote">
-					<p>Caleb’s description of Saba owes very little to the <span class="corr" id="xd20e1618" title="Source: authors">author’s</span> invention. Nearly all these details upon Arabia Felix will be found set forth in Strabo’s Geography.<a href="chapter-11.xhtml#noteref-3" epub:type="backlink">↩</a></p>
+					<p>Caleb’s description of Saba owes very little to the author’s invention. Nearly all these details upon Arabia Felix will be found set forth in Strabo’s Geography.<a href="chapter-11.xhtml#noteref-3" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-4" epub:type="endnote">
 					<p>The Red Sea.<a href="chapter-24.xhtml#noteref-4" epub:type="backlink">↩</a></p>
