Add epub:type=title to translator note

--- a/src/epub/text/translator-note.xhtml
+++ b/src/epub/text/translator-note.xhtml
@@ -7,7 +7,7 @@
 	</head>
 	<body epub:type="frontmatter z3998:non-fiction">
 		<section id="translator-note" epub:type="z3998:translator-note">
-			<h2>Translator’s Note</h2>
+			<h2 epub:type="title">Translator’s Note</h2>
 			<p>I am greatly indebted to my friend John Sargeaunt for a number of extremely useful comments and suggestions and to my friend Stephen McKenna for his version of the <i epub:type="z3998:hymn">Hymn to Aphrodite</i> in Chapter <span epub:type="z3998:roman">VII</span> and for assistance in the translation generally.</p>
 			<footer>
 				<p epub:type="z3998:signature"><abbr epub:type="z3998:given-name">A. T. de M.</abbr></p>
