--- a/src/epub/text/postscript.xhtml
+++ b/src/epub/text/postscript.xhtml
@@ -10,10 +10,14 @@
 			<h2 epub:type="title">Postscript</h2>
 			<blockquote epub:type="z3998:letter">
 				<header>
-					<p><span epub:type="z3998:salutation">Caleb of Mariaba (Saba), joint proprietor of the Great Diversorium, the Hermes House, at Alexandria, near the Canopian Gate, to the ever noble Lord Publius Lucius Sabinus, sculptor, at Cos.</span></p>
+					<p>
+						<span epub:type="z3998:salutation">Caleb of Mariaba (Saba), joint proprietor of the Great Diversorium, the Hermes House, at Alexandria, near the Canopian Gate, to the ever noble Lord Publius Lucius Sabinus, sculptor, at Cos.</span>
+					</p>
 					<p epub:type="se:letter.dateline">“Written at Alexandria, at <time>the second hour of the fourteenth day of the month of Pacothi, in the ninth year of the benevolent reign of our gracious Emperor Tiberius Augustus</time>.</p>
 				</header>
-				<p><b epub:type="z3998:salutation">My ever noble Lord, greeting!</b></p>
+				<p>
+					<b epub:type="z3998:salutation">My ever noble Lord, greeting!</b>
+				</p>
 				<p>“It is a pleasure to me, Caleb of Mariaba, to inform you by this letter, entrusted to Alexandros of Alexandria, master of the merchant trireme <i epub:type="se:name.vessel.ship">Berenice</i>, that by chance and great good fortune I have succeeded in disposing of the valuable quadrireme, the pleasure-ship <i epub:type="se:name.vessel.ship">Aphrodite</i>, once your property, noble lord, and in the presence of witnesses, free men, transferred to me at Cape Dire, by the Pillars of Sesostris⁠ ⁠… selling her at Arsinoe, previous to the passage through the Nechao Canal (which would probably have been liable to legal objections), at the very profitable price (as, considering all the circumstances, it appears to me, your most obedient, humble servant, friend, guide and companion in the chase) of (after deducting my commission and all my expenses) 900,000 (say, nine hundred thousand) sesterces, a sum reckoned according to the Roman value, item that noble quadrireme <i epub:type="se:name.vessel.ship">Aphrodite</i> and three hundred rowers (slaves), item all the necessary and most complete equipment, item costly furniture, carpets, plate and treasures of art, which would probably have produced large sums had it been possible to sell them separately, without danger of seizure in the name of our gracious Emperor Tiberius Augustus, but the separate sale of which would, in the circumstances aforesaid, have entailed innumerable drawbacks;</p>
 				<p>“Whereas I, Caleb of Mariaba, acting and appearing on my own behalf, as actual owner of the noble quadrireme <i epub:type="se:name.vessel.ship">Aphrodite</i>, have been able to sell this magnificent pleasure-ship to the noble Lord Baabab, a Persian satrap, residing at Susa;</p>
 				<p>“Wishing, my noble Lord Lucius, companion of the chase and friend, to act to your ever noble advantage, I propose, in order to reduce to a minimum all risks of shipwreck and piracy and other fatal accidents (such as a jealous fate keeps ever hanging over the heads of us poor mortals), to remit to you at frequent intervals, by the intermediary of a master of merchant-vessels, one trusted by all and personally known to myself and sailing to and fro between Alexandria and the Archipelago, a small sum in gold coin or bar, with account and settlement, so that you, my noble lord, may at the earliest moment possess your whole capital in your own hands.</p>
@@ -22,7 +26,7 @@
 				<footer>
 					<p epub:type="z3998:valediction">“Wishing you, my noble lord and friend and companion of the chase, the blessing of the gods upon your house, upon your new work and your household, upon your wife and your servants, the wise Thrasyllus and the faithful Tarrar, together with an always possible change of fortune, I bow low before you, in all humility and friendship, with one hand on my heart and one hand on my lips.</p>
 					<p epub:type="z3998:sender">“Your ever most obedient, humble servant and guide and friend and companion of the chase,<br/>
-						“<b epub:type="z3998:signature">Caleb of Mariaba (Saba)</b>, joint proprietor of the Great Diversorium, the Hermes House, at Alexandria, near the Canopian Gate.”</p>
+					“<b epub:type="z3998:signature">Caleb of Mariaba (Saba)</b>, joint proprietor of the Great Diversorium, the Hermes House, at Alexandria, near the Canopian Gate.”</p>
 				</footer>
 			</blockquote>
 		</section>
