Fixed lint errors in endnotes

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -10,19 +10,19 @@
 			<h2 epub:type="title">Endnotes</h2>
 			<ol>
 				<li id="note-1" epub:type="endnote">
-					<p>These cyamos-leaves were actually used for kitchen-utensils by the people of Alexandria; and their sale provided a regular livelihood.<a href="chapter-8.xhtml#noteref-1" epub:type="backlink">↩</a></p>
+					<p>These cyamos-leaves were actually used for kitchen-utensils by the people of Alexandria; and their sale provided a regular livelihood. <a href="chapter-8.xhtml#noteref-1" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-2" epub:type="endnote">
-					<p>Stone wells on the banks of the Nile, in which the water rose and fell as in the river itself; marked columns indicated the maximum, minimum and middle gauge. Inspectors informed the people beforehand how high the Nile would rise and when the stream would be likely to overflow its banks.<a href="chapter-11.xhtml#noteref-2" epub:type="backlink">↩</a></p>
+					<p>Stone wells on the banks of the Nile, in which the water rose and fell as in the river itself; marked columns indicated the maximum, minimum and middle gauge. Inspectors informed the people beforehand how high the Nile would rise and when the stream would be likely to overflow its banks. <a href="chapter-11.xhtml#noteref-2" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-3" epub:type="endnote">
-					<p>Caleb’s description of Saba owes very little to the author’s invention. Nearly all these details upon Arabia Felix will be found set forth in Strabo’s Geography.<a href="chapter-11.xhtml#noteref-3" epub:type="backlink">↩</a></p>
+					<p>Caleb’s description of Saba owes very little to the author’s invention. Nearly all these details upon Arabia Felix will be found set forth in Strabo’s Geography. <a href="chapter-11.xhtml#noteref-3" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-4" epub:type="endnote">
-					<p>The Red Sea.<a href="chapter-24.xhtml#noteref-4" epub:type="backlink">↩</a></p>
+					<p>The Red Sea. <a href="chapter-24.xhtml#noteref-4" epub:type="backlink">↩</a></p>
 				</li>
-				<li>
-					<p>The old canal through the Isthmus of Suez.<a href="chapter-24.xhtml#noteref-5" epub:type="backlink">↩</a></p>
+				<li id="note-5" epub:type="endnote">
+					<p>The old canal through the Isthmus of Suez. <a href="chapter-24.xhtml#noteref-5" epub:type="backlink">↩</a></p>
 				</li>
 			</ol>
 		</section>
