--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -21,7 +21,7 @@
 			by<br/>
 			<a href="PRODUCER_URL">PRODUCER</a>,<br/>
 			and is based on a transcription produced in 2011 by<br/>
-			<b epub:type="z3998:personal-name">TRANSCRIBER_1</b>, <b epub:type="z3998:personal-name">TRANSCRIBER_2</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
+			<b epub:type="z3998:personal-name">Jeroen Hellingman</b> and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/37497">Project Gutenberg</a><br/>
 			and on digital scans from the<br/>
