Completed content.opf

--- a/src/epub/text/postscript.xhtml
+++ b/src/epub/text/postscript.xhtml
@@ -10,9 +10,7 @@
 			<h2 epub:type="title">Postscript</h2>
 			<blockquote epub:type="z3998:letter">
 				<header>
-					<p epub:type="z3998:salutation">
-						Caleb of Mariaba (Saba), joint proprietor of the Great Diversorium, the Hermes House, at Alexandria, near the Canopian Gate, to the ever noble Lord Publius Lucius Sabinus, sculptor, at Cos.
-					</p>
+					<p epub:type="z3998:salutation">Caleb of Mariaba (Saba), joint proprietor of the Great Diversorium, the Hermes House, at Alexandria, near the Canopian Gate, to the ever noble Lord Publius Lucius Sabinus, sculptor, at Cos.</p>
 					<p epub:type="se:letter.dateline">“Written at Alexandria, at <time>the second hour of the fourteenth day of the month of Pacothi, in the ninth year of the benevolent reign of our gracious Emperor Tiberius Augustus</time>.</p>
 				</header>
 				<p>
