--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -12,14 +12,14 @@
 				<img alt="The Standard Ebooks logo." src="../images/logo.svg" epub:type="z3998:publisher-logo se:image.color-depth.black-on-transparent"/>
 			</header>
 			<p><i epub:type="se:name.publication.book">The Tour</i><br/>
-			was published in YEAR by<br/>
+			was published in 1911 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Louis_Couperus">Louis Couperus</a>.<br/>
-			It was translated from ORIGINAL_LANGUAGE in TRANSLATION_YEAR by<br/>
+			It was translated from Dutch in 1920 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Alexander_Teixeira_de_Mattos">Alexander Teixeira de Mattos</a>.</p>
 			<p>This ebook was produced for<br/>
 			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
 			by<br/>
-			<a href="PRODUCER_URL">PRODUCER</a>,<br/>
+			<a href="https://alberto.tobias.es">Alberto Tobias</a>,<br/>
 			and is based on a transcription produced in 2011 by<br/>
 			<b epub:type="z3998:personal-name">Jeroen Hellingman</b> and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
 			for<br/>
@@ -27,9 +27,9 @@
 			and on digital scans from the<br/>
 			<a href="https://archive.org/details/tourstoryofancie00couprich">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
-			<i epub:type="se:name.visual-art.painting">PAINTING</i>,<br/>
-			a painting completed in YEAR by<br/>
-			<a href="COVER_ARTIST_WIKI_URL">COVER_ARTIST</a>.<br/>
+			<i epub:type="se:name.visual-art.painting">The Sphinx</i>,<br/>
+			a painting completed in 1896 by<br/>
+			George E. Raum.<br/>
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in 2014 and 2009 by<br/>
