--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -24,6 +24,9 @@
 				<li id="note-5" epub:type="endnote">
 					<p>The old canal through the Isthmus of Suez. <a href="chapter-24.xhtml#noteref-5" epub:type="backlink">↩</a></p>
 				</li>
+				<li id="note-6" epub:type="endnote">
+					<p>Here follow the hour, day and month. <a href="postscript.xhtml#noteref-6" epub:type="backlink">↩</a></p>
+				</li>
 			</ol>
 		</section>
 	</body>
