--- a/src/epub/text/postscript.xhtml
+++ b/src/epub/text/postscript.xhtml
@@ -21,8 +21,7 @@
 				<p>“I take advantage of the opportunity, my noble lord, dear friend and stout companion of the chase, to tell you that at Mariaba, during a temporary stay in my beloved country, Sabaea, I bought myself a most beautiful slave, a Greek like Cora and excelling in many gifts, which slave, in order to bind her with greater certainty to my affection, I set free at Mariaba, leaving her, however, as my wife in my house in that city, where I hope one day, after achieving my fortune, to enjoy a life of bliss, fearing lest my brother Ghizla might allow his rights on her to prevail (according to the manners of our country) and hoping to visit her each time that my conduct of noble lords shall bring me to the pillars of Sesostris, from which my beloved country is easily reached.</p>
 				<p>“Wishing you, my noble lord and friend and companion of the chase, the blessing of the gods upon your house, upon your new work and your household, upon your wife and your servants, the wise Thrasyllus and the faithful Tarrar, together with an always possible change of fortune, I bow low before you, in all humility and friendship, with one hand on my heart and one hand on my lips.</p>
 				<footer>
-					<p><span epub:type="z3998:valediction">“Your ever most obedient, humble servant and guide and friend and companion of the chase,</span>
-						<br/>
+					<p><span epub:type="z3998:valediction">“Your ever most obedient, humble servant and guide and friend and companion of the chase,</span><br/>
 					“<b epub:type="z3998:sender z3998:signature">Caleb of Mariaba (Saba)</b>, joint proprietor of the Great Diversorium, the Hermes House, at Alexandria, near the Canopian Gate.”</p>
 				</footer>
 			</blockquote>
