Rename epilogue file

--- a/src/epub/text/epilogue.xhtml
+++ b/src/epub/text/epilogue.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="postscript" epub:type="epilogue">
+		<section id="epilogue" epub:type="epilogue">
 			<h2 epub:type="title">Postscript</h2>
 			<blockquote epub:type="z3998:letter">
 				<header>
