--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -107,7 +107,7 @@
 							<a href="text/chapter-29.xhtml" epub:type="z3998:roman">XXIX</a>
 						</li>
 						<li>
-							<a href="text/postscript.xhtml">Postscript</a>
+							<a href="text/epilogue.xhtml">Postscript</a>
 						</li>
 					</ol>
 				</li>
