--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -25,7 +25,7 @@
 					<p>The old canal through the Isthmus of Suez. <a href="chapter-24.xhtml#noteref-5" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-6" epub:type="endnote">
-					<p>Here follow the hour, day and month. <a href="postscript.xhtml#noteref-6" epub:type="backlink">↩</a></p>
+					<p>Here follow the hour, day and month. <a href="epilogue.xhtml#noteref-6" epub:type="backlink">↩</a></p>
 				</li>
 			</ol>
 		</section>
